hphp/hack/test/typecheck/generics_restrictions/covariance_super_constraint.php
<?hh // partial

class Foo<-T> {
  public function bar<Tu super T>(): Tu {
    throw new Exception();
  }
}
